fix that content is not placed behind footer

--- a/_1327/static/less/variables.less
+++ b/_1327/static/less/variables.less
@@ -12,6 +12,7 @@
 
 
 @headline-height:        50px;
+@footer-height:          40px;
 
 //== Colors
 //
